--- a/Slovak/main/Settings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/strings.xml
@@ -460,7 +460,7 @@ Správca môže sledovať a spravovať nastavenia, prístup, aplikácie a údaje
     <string name="app_lock_role_instruction">Chráňte vaše súkromné aplikácie</string>
     <string name="app_memory_use">Využitie pamäte</string>
     <string name="app_mobile">Mobilné</string>
-    <string name="app_name">Nastavenie</string>
+    <string name="app_name">Nastavenia</string>
     <string name="app_name_label">Aplikácie</string>
     <string name="app_name_na">Využitie dát</string>
     <string name="app_not_found_dlg_text">Aplikáciu sa nepodarilo nájsť na zoznamu nainštalovaných aplikácií.</string>
@@ -817,9 +817,9 @@ Vysielanie používa signály Bluetooth s nízkou spotrebou energie."</string>
     <string name="bluetooth_connect_settings">Nastavenie Bluetooth pripojenia</string>
     <string name="bluetooth_connect_specific_profiles_title">Pripojiť k sieti...</string>
     <string name="bluetooth_connected">Pripojené</string>
-    <string name="bluetooth_connected_no_a2dp">Pripojené (žiadne média)</string>
+    <string name="bluetooth_connected_no_a2dp">Pripojené (žiadne médiá)</string>
     <string name="bluetooth_connected_no_headset">Pripojené (žiadny telefón)</string>
-    <string name="bluetooth_connected_no_headset_no_a2dp">Pripojené (žiadny telefón alebo média)</string>
+    <string name="bluetooth_connected_no_headset_no_a2dp">Pripojené (žiadny telefón alebo médiá)</string>
     <string name="bluetooth_connected_no_map">Pripojené (bez prístupu ku správam)</string>
     <string name="bluetooth_connecting">Pripájanie...</string>
     <string name="bluetooth_connecting_error_message">Pri pripájaní k zariadeniu %1$s došlo k problémom.</string>
@@ -866,7 +866,7 @@ Vysielanie používa signály Bluetooth s nízkou spotrebou energie."</string>
     <string name="bluetooth_display_passkey_pin_msg">Párovanie so zariadením: %1$s Zadajte:%2$s a potom stlačte klávesu Return alebo Enter.</string>
     <string name="bluetooth_display_settings">Nastavenie Bluetooth displeja</string>
     <string name="bluetooth_dock_settings">Nastavení doku</string>
-    <string name="bluetooth_dock_settings_a2dp">Pre hudbu a média</string>
+    <string name="bluetooth_dock_settings_a2dp">Pre hudbu a médiá</string>
     <string name="bluetooth_dock_settings_headset">Ako telefón pre hlasitý reproduktor</string>
     <string name="bluetooth_dock_settings_remember">Zapamätať nastavenie</string>
     <string name="bluetooth_dock_settings_title">Použiť zvuk doku</string>
@@ -1485,7 +1485,7 @@ Ak chcete ďalej používať svoj telefón, musíte obnoviť jeho továrenské n
     <string name="crypt_keeper_decrypt_methods">Po zašifrovaní vášho zariadenia a máte nastavený zámok gestom alebo heslom, budete ho musieť zadať vždy pre dešifrovanie zariadenia po každom spustení. Iný spôsob ako dešifrovať vaše zariadenie je len pomocou Factory reset a všetky vaše dáta budú vymazané.</string>
     <string name="crypt_keeper_decrypt_methods_cannot_decrypt">Ak máte zašifrované zariadenie, budete musieť zadať vaše heslo, PIN alebo vzor pri každom spustení zariadenia pre jeho dešifrovanie.</string>
     <string name="crypt_keeper_decrypt_methods_title">Dešifrovanie vášho zariadenia</string>
-    <string name="crypt_keeper_desc">"Účty, nastavenie, stiahnuté aplikácie a ich dáta, média a ďalšie súbory môžete šifrovať. Akonáhle telefón zašifrujete, musíte ho pri každom zapnutí dešifrovať pomocou kódu PIN alebo hesla. Šifrovanie môžete zrušiť len obnovením továrneho nastavenia, čím sa všetky dáta v telefóne vymažú. Šifrovanie môže trvať viac než hodinu. V telefóne musí byť nabitá batéria a po celú dobu šifrovania musí byť telefón pripojený k zdroji elektriny. Pokiaľ proces šifrovania prerušíte, stratíte niektoré alebo všetky dáta."</string>
+    <string name="crypt_keeper_desc">"Účty, nastavenie, stiahnuté aplikácie a ich dáta, médiá a ďalšie súbory môžete šifrovať. Akonáhle telefón zašifrujete, musíte ho pri každom zapnutí dešifrovať pomocou kódu PIN alebo hesla. Šifrovanie môžete zrušiť len obnovením továrneho nastavenia, čím sa všetky dáta v telefóne vymažú. Šifrovanie môže trvať viac než hodinu. V telefóne musí byť nabitá batéria a po celú dobu šifrovania musí byť telefón pripojený k zdroji elektriny. Pokiaľ proces šifrovania prerušíte, stratíte niektoré alebo všetky dáta."</string>
     <string name="crypt_keeper_dialog_need_password_message">Pred začiatkom šifrovania musíte nastaviť kód PIN alebo heslo zámku obrazovky.</string>
     <string name="crypt_keeper_dialog_need_password_title">Chýba heslo alebo kód PIN zámku obrazovky</string>
     <string name="crypt_keeper_encrypt_summary">Pri každom zapnutí telefónu vyžadovať kód PIN alebo heslo za účelom dešifrovania</string>
@@ -3948,7 +3948,7 @@ Vyberte váš operačný systém:"</string>
     <string name="musicfx_title">Hudobné efekty</string>
     <string name="mute">Tichý režim</string>
     <string name="mute_media_sound_summary">Hry, hudba, videá a iné aplikácie</string>
-    <string name="mute_media_sound_title">Stíšiť média v Tichom režime</string>
+    <string name="mute_media_sound_title">Stíšiť médiá v Tichom režime</string>
     <string name="mute_music_stream">Stíšiť streamovanie hudby</string>
     <string name="mvno_match_data">Hodnota MVNO</string>
     <string name="mvno_type">Typ MVNO</string>
@@ -5266,7 +5266,7 @@ Ako funkciu použiť:
     <string name="security_encryption_attention_2">Pri každom spustení bude nutné zadať heslo zamykacej obrazovky pre dešifrovanie zariadenia. Reštartovanie bude trvať dlhšie ako obyčajne.</string>
     <string name="security_encryption_attention_3">Budete musieť nastaviť nové heslo.</string>
     <string name="security_encryption_attention_4">Uistite sa, že si budete pamätať vaše heslo, inak bude nutné kompletné vymazanie zariadenia.</string>
-    <string name="security_encryption_attention_info">Môžete zašifrovať účty, nastavenia, stiahnuté aplikácie a ich dáta, média, a ostatné súbory.</string>
+    <string name="security_encryption_attention_info">Môžete zašifrovať účty, nastavenia, stiahnuté aplikácie a ich dáta, médiá, a ostatné súbory.</string>
     <string name="security_encryption_attention_title">Dôležité upozornenie</string>
     <string name="security_encryption_close_dialog_info">Ak nezašifrujete svoje zariadenie, niektoré Google služby môžu byť nedostupné (napr. Google NFC Platby).</string>
     <string name="security_encryption_close_dialog_title">Vrátiť na predvolené zabezpečenie</string>
@@ -5364,15 +5364,15 @@ Ako funkciu použiť:
     <string name="setting_privacy_password">Nastaviť heslo ochrany súkromia</string>
     <string name="settings_backup">Nastavenie zálohovania</string>
     <string name="settings_backup_summary">Zálohovať moje nastavenie</string>
-    <string name="settings_button">Nastavenie</string>
+    <string name="settings_button">Nastavenia</string>
     <string name="settings_charging_at_fast_speed">Rýchle nabíjanie</string>
     <string name="settings_charging_at_normal_speed">Nabíjanie</string>
     <string name="settings_charging_at_top_speed">Nabíjanie max. rýchlosťou</string>
     <string name="settings_charging_fully_charged">Nabité</string>
     <string name="settings_charging_not_charging">Nenabíja sa</string>
     <string name="settings_forbidden_message">Toto nastavenie je deaktivované</string>
-    <string name="settings_label">Nastavenie</string>
-    <string name="settings_label_launcher">Nastavenie</string>
+    <string name="settings_label">Nastavenia</string>
+    <string name="settings_label_launcher">Nastavenia</string>
     <string name="settings_license_activity_loading">Načítavam...</string>
     <string name="settings_license_activity_title">Licencia open source</string>
     <string name="settings_license_activity_unavailable">Pri načítaní licencií došlo k chybe.</string>
@@ -5477,8 +5477,8 @@ Ako funkciu použiť:
     <string name="silent_duration">Trvanie</string>
     <string name="silent_mode">Tichý režim</string>
     <string name="silent_mode_disable_media">Stíšiť všetko</string>
-    <string name="silent_mode_enable_media">Prehrávať média</string>
-    <string name="silent_mode_summary">Stíšiť hovory, upozornenia a média</string>
+    <string name="silent_mode_enable_media">Prehrávať médiá</string>
+    <string name="silent_mode_summary">Stíšiť hovory, upozornenia a médiá</string>
     <string name="silent_mode_title">Stlmiť všetko</string>
     <string name="silent_mode_toggle_title">Tichý režim</string>
     <string name="silent_off">Deaktivovať</string>
@@ -5700,11 +5700,11 @@ Chcete teraz odvolať súhlas s %s?</string>
     <string name="sound_category_sound_title">Všeobecné</string>
     <string name="sound_category_system_title">Systém</string>
     <string name="sound_effects_enable_title">Zvuky pri dotyku</string>
-    <string name="sound_haptic_settings">Zvuk a dotyky</string>
+    <string name="sound_haptic_settings">Zvuky a dotyky</string>
     <string name="sound_mode">Tichý režim &amp; Nerušiť</string>
-    <string name="sound_settings">Zvuk</string>
-    <string name="sound_settings_tab_haptic">Dotyk</string>
-    <string name="sound_settings_tab_sound">Zvuk</string>
+    <string name="sound_settings">Zvuky</string>
+    <string name="sound_settings_tab_haptic">Dotyky</string>
+    <string name="sound_settings_tab_sound">Zvuky</string>
     <string name="sound_stereo_mode_summary">Dostupné len ak prehrávate zvuk reproduktorom</string>
     <string name="sound_stereo_mode_title">Stereo zvuk</string>
     <string name="sound_title">Zvuk</string>
@@ -7487,7 +7487,7 @@ Nastavenie telefónu môže vyžadovať prenos významného množstva dát."</st
     <string name="zen_mode_selected_messages">Vybrané správy</string>
     <string name="zen_mode_settings_title">Vyrušenia</string>
     <string name="zen_mode_start_time">Čas začiatku</string>
-    <string name="zen_mode_summary">Stíši prichádzajúce hovory, oznámenia, média a vypne vibrácie</string>
+    <string name="zen_mode_summary">Stíši prichádzajúce hovory, oznámenia, médiá a vypne vibrácie</string>
     <string name="zen_mode_summary2">Stíšiť hovory a upozornenia, vypnúť vibrácie</string>
     <string name="zen_mode_summary_alarms_only_by_time">Zmena na možnosť Iba budíky platná do %1$s</string>
     <string name="zen_mode_summary_alarms_only_indefinite">Zmena na možnosť Iba budíky platná natrvalo</string>
