--- a/Slovak/main/Mms.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Mms.apk/res/values-sk/strings.xml
@@ -531,7 +531,7 @@
 Pre aktiváciu tejto služby bude odoslaná bežná SMS."</string>
     <string name="mx_main_purpose_short">Mi Správy umožňujú používateľom MIUI odosielať SMS a MMS správy zdarma.</string>
     <string name="mx_message">Mi Správy</string>
-    <string name="mx_msg">Cloud Správa</string>
+    <string name="mx_msg">Cloud Správy</string>
     <string name="mx_msg_pageview_setting_title">Nastavenie Cloudových správ</string>
     <string name="mx_offline">Offline</string>
     <string name="mx_on_sim_1">Cloudové správy na SIM 1</string>
@@ -618,7 +618,7 @@ Pre aktiváciu tejto služby bude odoslaná bežná SMS."</string>
     <string name="pref_msg_trash_bin_title">Nedávno vymazané správy</string>
     <string name="pref_notification_settings_title">Nastavenie oznamovania</string>
     <string name="pref_other_title">Ostatné</string>
-    <string name="pref_show_blocked_messages_summary">Zobraziť blokované SMS v konverzácií</string>
+    <string name="pref_show_blocked_messages_summary">Zobraziť blokované SMS v konverzácii</string>
     <string name="pref_show_list_avatar_summary">Zobraziť podrobnosti a fotografie kontaktov</string>
     <string name="pref_show_photo_word_summary">Automaticky priradiť obrázok kontaktu bez fotografie</string>
     <string name="pref_show_sms_template_entry_summary">Kontrolovať SMS pre jednorázové heslá</string>
@@ -632,7 +632,7 @@ Pre aktiváciu tejto služby bude odoslaná bežná SMS."</string>
     <string name="pref_summary_auto_delete">Minulo sa úložisko, vymažte staré správy.</string>
     <string name="pref_summary_collapse_ad_notification">Zobraziť všetky reklamné SMS v osobitnej zložke</string>
     <string name="pref_summary_collapse_ad_notification_mms">Zobraziť všetky reklamné MMS v osobitnej zložke</string>
-    <string name="pref_summary_delete_limit">Počet správ v konverzácií: %1$s</string>
+    <string name="pref_summary_delete_limit">Počet správ v konverzácii: %1$s</string>
     <string name="pref_summary_delivery_reports">Požadovať oznámenie o doručení správy</string>
     <string name="pref_summary_delivery_ringtone">Upozorniť zvukom pri doručení správy</string>
     <string name="pref_summary_enable_classify">Presunúť reklamné a finančné SMS do oddelených kariet</string>
