--- a/Slovak/main/MiMover.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiMover.apk/res/values-sk/strings.xml
@@ -537,7 +537,7 @@ zvuky, video, dokumenty a aplikácie do nového zariadenia"</string>
      <string name="dialog_request_permission_message_buttom_content">Povoľte tejto aplikácii pripojenie na internet a udeľte povinné povolenia uvedené vyššie.</string>
      <string name="dialog_request_permission_message_extra_summary">Tieto povolenia sú potrebné na sprístupnenie základných funkcií a služieb tejto aplikácie.</string>
      <string name="dialog_request_permission_message_extra_title">Povinné povolenia</string>
-     <string name="dialog_request_permission_message_link" formatted="false"><Data>"Zároveň si v záujme úplného pochopenia svojich práv ako používateľa, ako aj spôsobov, akými používame vaše údaje, prečítajte a súhlasíte s našimi &lt;a href='%1s'>Zmluva s používateľom&lt;/a> a &lt;a href='%2s'>Zásady ochrany osobných údajov&lt;/a>."</Data></string>
+     <string name="dialog_request_permission_message_link">Zároveň si v záujme úplného pochopenia svojich práv ako používateľa, ako aj spôsobov, akými používame vaše údaje, prečítajte a súhlasíte s našimi Podmienkami používania a Ochranou súkromia.</string>
      <string name="dialog_request_permission_message_provision_link">Zároveň si prečítajte naše %1$s a %2$s, aby ste plne porozumeli vašim právam používateľa, ako aj spôsobom, akými používame vaše údaje. reťazec>
      <string name="dialog_request_permission_title">Pozor</string>
 Otvorte WeChat a prejdite na Ja > Nastavenia > Všeobecné > Zálohovať &amp; migrovať čety."</string>
